--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -163,7 +163,7 @@
             <!-- Nawab -->
             <div class="row">
                 <div class="col-lg-8">
-                    <div class="row">
+                    <div class="row" *ngIf="treatments.length > 0">
                         <div class="col-lg-6 col-md-6" *ngFor="let treatment of treatments; let i = index">
                             <div class="package-box position-relative">
                                 <div class="package-title d-flex align-items-center">
@@ -176,6 +176,13 @@
                                     <img [src]="'assets/images/packages-detail.svg'">
                                 </a>
                             </div>
+                        </div>
+                    </div>
+                    
+                    <!-- Fallback if no featured treatments -->
+                    <div class="row" *ngIf="treatments.length === 0">
+                        <div class="col-lg-12 text-center py-5">
+                            <p class="text-muted">No featured treatments available at the moment</p>
                         </div>
                     </div>
                 </div>
