--- a/src/app/pages/hero-section/hero-section.html
+++ b/src/app/pages/hero-section/hero-section.html
@@ -369,7 +369,7 @@
     <div class="container">
         <div class="row mt-4" *ngIf="doctorResults.length > 0 && !isDoctorSearching">
             <div class="col-lg-12">
-                <div class="doctor-results-container">
+                <div class="doctor-results-container search-results-container">
                     <h3 class="mb-4">Doctor Results ({{ doctorResults.length }} doctors
                         found)</h3>
                     <div class="row">
