--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -239,13 +239,13 @@
                 <div class="col-lg-9">
                     <div class="main-head text-center mbc-50">
                         <h2>Our Partner Hospital</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>Lorem Ipsum has
                             been the industry's standard dummy text ever since the 1500s, when an unknown printer</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container" *ngIf="partners.length > 0">
+        <div class="container-fluid" *ngIf="partners.length > 0">
             <div class="row">
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6" *ngFor="let partner of partners">
                     <div class="partner-logo h-100">
