--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,23 +1,23 @@
 <section class="inner-banner" *ngIf="banner">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="inner-baner-dtl position-relative text-center">
-            <img [src]="'http://165.22.223.163:8000' + banner.image_url" class="w-100 img-fluid rounded-5" />
-            <div class="inner-heading">
-              <h2>{{ banner.title }}</h2>
-              <ul class="breadcumb d-flex justify-content-center align-items-center gap-3 ps-0">
-                <li><a routerLink="/">Home</a></li>
-                <li><img [src]="'assets/images/breadcumb.svg'" /></li>
-                <li><a routerLink="/contact">{{ banner.title }}</a></li>
-              </ul>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="inner-baner-dtl position-relative text-center">
+                    <img [src]="'http://165.22.223.163:8000' + banner.image_url" class="w-100 img-fluid rounded-5" />
+                    <div class="inner-heading">
+                        <h2>{{ banner.title }}</h2>
+                        <ul class="breadcumb d-flex justify-content-center align-items-center gap-3 ps-0">
+                            <li><a routerLink="/">Home</a></li>
+                            <li><img [src]="'assets/images/breadcumb.svg'" /></li>
+                            <li><a routerLink="/contact">{{ banner.title }}</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </section>
-  
+</section>
+
 
 <section class="contact-detail ptc-80">
     <div class="container">
@@ -72,7 +72,8 @@
                 <div class="contact-form-inner">
                     <div *ngIf="!isSubmitted">
                         <h5>Get in touch with us</h5>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been
                             the industry's standard dummy.</p>
                         <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
                             <div class="row">
@@ -132,25 +133,32 @@
                                 </div>
                             </div> -->
                             <div class="mb-3">
-                                <select
-                                  class="form-select"
-                                  formControlName="department"
-                                  [class.placeholder]="!contactForm.get('department')?.value"
-                                >
-                                  <option value="">Select Treatment Type</option>
-                                  <option *ngFor="let type of treatmentTypes" [value]="type">
-                                    {{ type }}
-                                  </option>
-                                </select>
-                              
-                                <div
-                                  class="text-danger"
-                                  *ngIf="contactForm.get('department')?.touched && contactForm.get('department')?.invalid"
-                                >
-                                  Treatment type is required
+                                <div class="custom-select-wrapper">
+                                    <div class="form-select" [class.open]="isDepartmentDropdownOpen"
+                                        [class.placeholder]="!selectedDepartmentLabel"
+                                        [class.is-invalid]="contactForm.get('department')?.touched && contactForm.get('department')?.invalid"
+                                        (click)="toggleDepartmentDropdown()">
+                                        <span>{{ selectedDepartmentLabel || 'Select Treatment Type' }}</span>
+                                    </div>
+
+                                    <div class="select-dropdown" *ngIf="isDepartmentDropdownOpen">
+                                        <div class="select-option" (click)="selectDepartment('')">
+                                            Select Treatment Type
+                                        </div>
+                                        <div class="select-option" *ngFor="let type of treatmentTypes"
+                                            [class.selected]="contactForm.get('department')?.value === type"
+                                            (click)="selectDepartment(type)">
+                                            {{ type }}
+                                        </div>
+                                    </div>
                                 </div>
-                              </div>
-                              
+
+                                <div class="text-danger"
+                                    *ngIf="contactForm.get('department')?.touched && contactForm.get('department')?.invalid">
+                                    Treatment type is required
+                                </div>
+                            </div>
+
                             <div class="mb-3">
                                 <textarea class="form-control" rows="3" placeholder="Enter Your Query"
                                     formControlName="query"></textarea>
@@ -160,7 +168,8 @@
                                 </div>
                             </div>
                             <div class="">
-                                <button type="submit" class="btn-default">Send <i class="fa-solid fa-arrow-up"></i></button>
+                                <button type="submit" class="btn-default">Send <i
+                                        class="fa-solid fa-arrow-up"></i></button>
                             </div>
                         </form>
                     </div>
