--- a/src/app/pages/attractions/attractions.css
+++ b/src/app/pages/attractions/attractions.css
@@ -61,3 +61,11 @@
     width: 16px;
     text-align: center;
 }
+.dtl-doctor-info a 
+{
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 3px;
+    text-decoration: none;
+    color: var(--primary-font) !important;
+}
