--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -189,7 +189,9 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <img [src]="'assets/images/packages-main.png'" class="img-fluid w-100 rounded-4 mt-2">
+                    <div class="package-image">
+                        <img [src]="'assets/images/packages-main.png'" class="img-fluid w-100 rounded-4 mt-2">
+                    </div>
                 </div>
             </div>
 
