--- a/src/app/pages/blog-detail/blog-detail.css
+++ b/src/app/pages/blog-detail/blog-detail.css
@@ -13,7 +13,7 @@
 }
 .dtl-doctor-head h4
 {
-    font-size: 24px;
+    font-size: 22px;
     margin-bottom: 5px;
 }
 .dtl-doctor-info
@@ -82,6 +82,15 @@
 }
 .blogdtl-img img
 {
-    height: 220px;
+    height: 230px;
     object-fit: cover;
+}
+.blog-dtl-img img
+{
+    max-height: 340px;
+    object-fit: cover;
+}
+.blog-detail .blog-card
+{
+    margin-bottom: 0px;
 }
