--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -392,7 +392,7 @@
 }
 
 .user-card-img {
-    height: 200px;
+    height: 240px;
     overflow: hidden;
 }
 
@@ -532,10 +532,7 @@
 }
 
 .dtl-doctor-info p {
-    font-size: 20px;
-    font-weight: 500;
     margin-bottom: 3px;
-    color: var(--secondary-color);
 }
 
 .dtl-doctor-info ul {
@@ -659,12 +656,9 @@
 }
 
 .blog-card {
+    margin-bottom: 30px;
     border-radius: 15px;
     box-shadow: rgb(99 99 99 / 12%) 0px 2px 8px 0px;
-}
-.blog-card
-{
-    margin-bottom: 30px;
 }
 .contact-inner
 {
@@ -826,10 +820,15 @@
   background: url("../images/features-check.svg") no-repeat center center;
   background-size: contain;
 }
+.detail-image
+{
+    height: 100%;
+}
 .detail-image img
 {
-    max-height: 400px;
+    min-height: 400px;
     object-fit: cover;
+    height: 100%;
 }
 .tret-filter-main
 {
@@ -907,6 +906,17 @@
     background-color: #f8d7da;
     border-color: #f1aeb5;
     color: #58151c;
+}
+.blog-category .detail-doctors,
+.detail-doctors.recent-post
+{
+    background-color: #fff;
+    box-shadow: rgb(99 99 99 / 12%) 0px 2px 8px 0px;
+}
+.blog-category-main 
+{
+    position: sticky;
+    top: 100px;
 }
 /* responsive start */
 @media only screen and (min-width: 768px) and (max-width: 1024px)
